[gd_scene load_steps=4 format=2]

[ext_resource path="res://goldenGadget/GGTestsDebugDraw.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="GGTestsDebugDraw" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 359.875 )
scale = Vector2( 0.625, 720.25 )
texture = SubResource( 2 )

[node name="Button1" type="Button" parent="."]
margin_left = 1128.0
margin_top = 64.0
margin_right = 1215.0
margin_bottom = 101.0
text = "circle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1128.0
margin_top = 192.0
margin_right = 1215.0
margin_bottom = 229.0
text = "lines"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="draw_debug_shapes"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
